--- a/Diplom/css/str1.css
+++ b/Diplom/css/str1.css
@@ -189,7 +189,9 @@ html {
   list-style-type: none;
 
 }
-
+a {
+  color: black;
+}
 .left_columndown a {
   text-decoration: none;
   display: block;
@@ -258,6 +260,12 @@ html {
 }
 
 .DDY {
+  border-radius: 20px;
+  padding: 5px;
+  background: whitesmoke;
+  opacity: 0.8;
+}
+.crisis {
   border-radius: 20px;
   padding: 5px;
   background: whitesmoke;
